--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,38 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# env
+**/.env
 .env
+/backend/.env
+backend/.env
+
+#cache
+app.pyc
+app.spec
 __pycache__
-output
-.venv
-py-to-exe-config.json
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+/dist
+/resources/app
+/resources/app.app
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
