--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
